[fix] overflow da descricao

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	max-height: 100%;
 	height: 100%;
-	min-width: max-content;
+	min-width: fit-content;
 }
 
 .box-header {
